# rpi5-iot-gateway

./: .envrc  .gitignore  .yamllint  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  OTA_UPDATE.md  README.md  cliff.toml  pyproject.toml  rpi5.yml
.claude/agents/: app-developer.md  recipe-author.md
.claude/rules/: cross-compilation.md  recipe-conventions.md  yocto-patterns.md
.github/workflows/: release-hygiene.yml  release-notes.yml
docs/: BUILD.md  DEV_SSH_KEYS.md  FIT_BOOT_SIGNING.md  FIT_SIGNING.md  KERNEL.md  KERNEL_CVE_PATCH.md  KERNEL_DRIVER_BACKPORT.md  LSM_IMA_EXPLORATION.md  NETWORKING.md  OBSERVABILITY.md  OPERATIONS.md  OTA_ADAPTIVE_BENCHMARK.md  OTA_ADAPTIVE_BENCHMARK_2026-03-03.md  OTA_ETC_MIGRATION_TEST.md  OTA_UPDATE.md  OTBR.md  OTBR_NON_ROOT.md  OVERLAY_RECONCILIATION.md  PARTITIONS.md  PERSISTENT_STATE.md  RAUC_PKI.md  RAUC_UPDATE.md  RELEASE.md  SECURE_STORAGE_REQUIREMENTS.md  SECURITY.md  SELINUX.md  THREAT_MODEL.md  TPM_REQUIREMENTS.md  UBOOT_HARDENING.md  UBOOT_TPM_SLB9672.md  running-as-non-root-user.md  running-otbr-as-non-root-user.md
kas/: containers.yml  cve.yml  desktop.yml  desktop.yml.example  fit-release-trust.yml  fitimage.yml  local.yml.example  otbr.yml  rauc-autofetch.yml  rauc.yml  rpi5-autofetch.yml  spdx.yml  tpm.yml  uboot-next.yml  uboot-prod-hardening.yml  watchdog.yml
meta-iot-gateway/: README.md  SECURITY.md
meta-iot-gateway/classes/: iotgw-fit-custom-its.bbclass  iotgw-fit-signed-or-fail.bbclass  iotgw-fit-signing-guard.bbclass  iotgw-kernel-fragments.bbclass  iotgw-rauc-adaptive-guard.bbclass  iotgw-rauc-image.bbclass  iotgw-rootfs.bbclass  iotgw-uboot-prod-key-guard.bbclass  kernel-hardening-check.bbclass
meta-iot-gateway/conf/: layer.conf
meta-iot-gateway/scripts/: generate-rauc-certs.sh
scripts/: container-smoke-target.sh  deploy-iotgw-otbrctl.sh  env.local.sh.example  env.sh  fit-signing-profiles.yml  kernel-fragment-audit.sh  khc-build.sh  ota-bench-target.sh  ota-certs-sync.sh  ota-fit-slot-check.sh  ota-pkcs11-provision-check.sh  ota-smoke-target.sh  otbr-webui-dev-deploy.sh  otbr-webui-dev-rollback.sh  release-build.sh  release-manifest.sh  run-target-checks.sh  sign-bootfiles-fit.sh  sign-fit.sh  sign_fit.py  tpm-cryptenroll-selftest.sh  tpm-encrypted-store-dev.sh
scripts/fit-signing/: sign_fit.py  (+1 more)
(+394 files in other folders)
