# Host-side Python test environment for the rpi5-iot-gw project.
#
# This file does NOT define a pip-installable package. Its only purpose
# is to give `uv` a reproducible runtime + dev environment for running
# the FIT-signing test suite under scripts/tests/. Yocto/BitBake builds
# do not depend on uv or on this venv.
#
# Operator usage of scripts/sign_fit.py continues to work with the
# system Python plus a distro-installed `python3-yaml` (see
# docs/FIT_BOOT_SIGNING.md). The Makefile signing targets do NOT run
# through `uv run`.
#
# Refresh the lockfile with `make tools-venv` (or `uv sync`). Bump deps
# via `uv lock --upgrade` then re-run `uv sync`.

[project]
name = "rpi5-iot-gw-host-tools"
version = "0.1.0"
description = "Host-side tooling test environment (FIT signing). Not pip-installable."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["scripts/tests"]
addopts = ["-ra"]

[tool.uv]
# Keep the venv out of the source tree; uv default is `.venv` which
# .gitignore already excludes.
package = false
